--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <img src="images/mosque.png" alt="" />
+      <img src="images/crescent.png" alt="" />
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
