css is imlemented for images

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <img src="images/mosque.png" alt="" />
-      <img src="images/crescent.png" alt="" />
+    <div class="images">
+      <img id="mosque" src="images/mosque.png" alt="" />
+      <img id="crescent" src="images/crescent.png" alt="" />
     </div>
 
     <script src="index.js"></script>
