added text style

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 id="firstWord">EID</h1>
     <div class="images">
       <img id="mosque" src="images/mosque.png" alt="" />
       <img id="crescent" src="images/crescent.png" alt="" />
     </div>
+    <h1 id="secondWord">MUBARAK</h1>
 
     <script src="index.js"></script>
   </body>
