gsap is implemented

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <title>Document</title>
   </head>
   <body>
-    <h1 id="firstWord">EID</h1>
+    <h1 class="firstWord">EID</h1>
     <div class="images">
-      <img id="mosque" src="images/mosque.png" alt="" />
-      <img id="crescent" src="images/crescent.png" alt="" />
+      <img class="mosque" src="images/mosque.png" alt="" />
+      <img class="crescent" src="images/crescent.png" alt="" />
     </div>
-    <h1 id="secondWord">MUBARAK</h1>
+    <h1 class="secondWord">MUBARAK</h1>
 
     <script src="index.js"></script>
   </body>
