--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 class="firstWord">EID</h1>
     <div class="images">
       <img class="mosque" src="images/mosque.png" alt="" />
       <img class="crescent" src="images/crescent.png" alt="" />
     </div>
-    <h1 class="secondWord">MUBARAK</h1>
+    <h1 class="Word">EID MUBARAK</h1>
 
     <script src="index.js"></script>
   </body>
